2024-07-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* src/vanilla.cpp: Accommodate builds on QuantLib versions as old as
	1.25 by retaining the previous dividend treatment under #ifdef

2024-07-23  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.23
	* configure.ac: Idem
	* configure: Idem

	* src/bonds.cpp: Minor refactoring and C++ update
	* src/utils.cpp: Idem

2024-07-22  Dirk Eddelbuettel  <edd@debian.org>

	* src/bermudan.cpp: Finalised refactoring and C++ update

2024-07-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/hullwhite.cpp: Minor refactoring and C++ update
	* src/bermudan.cpp: Idem

2024-07-14  Dirk Eddelbuettel  <edd@debian.org>

	* src/utils.cpp (getFutureDate): New helper function
	* inst/include/rquantlib_internal.h: Declaration
	* src/asian.cpp: Use new helper function
	* src/barrier_binary.cpp: Idem
	* src/implieds.cpp Idem
	* src/vanilla.cpp: Idem

	* inst/include/rquantlib_internal.h: Move qlext namespace defintion

	* src/affine.cpp: Minor refactoring and C++ update

2024-07-13  Dirk Eddelbuettel  <edd@debian.org>

	* src/asian.cpp: Minor refactoring and C++ update
	* src/barrier_binary.cpp: Idem
	* src/discount.cpp: Idem
	* src/hullwhite.cpp: Idem
	* src/implieds.cpp Idem
	* src/vanilla.cpp: Idem
	* src/zero.cpp: Idem

2024-07-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro release and date

	* src/vanilla.cpp (europeanOptionEngine): Update dividend case to
	(initially deprecated, now removed) changes in upstream QuantLib

	* src/utils.cpp: Update to Euribor* deprecation, conditional on
	using QuantLb 1.35 or later

	* README.md: Update three URLs

2024-05-25  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Use tinyverse.netlify.app for dependency badge

2024-04-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Version, Date): New release 0.4.22
	* configure.ac: Idem
	* configure: Idem
