@@ -1,10 +1,10 @@
 # -*- mode: Makefile -*-
 #
-# Copyright 2008 - 2023  Dirk Eddelbuettel
+# Copyright 2008 - 2024  Dirk Eddelbuettel
 
 # See configure.in for how these variables are computed
-PKG_CXXFLAGS=@CXXFLAGS@ -I../inst/include -I. $(SHLIB_OPENMP_CXXFLAGS)
-PKG_LIBS=@LDFLAGS@ $(SHLIB_OPENMP_CXXFLAGS)
+PKG_CXXFLAGS=@PKG_CXXFLAGS@ -I../inst/include -I. $(SHLIB_OPENMP_CXXFLAGS)
+PKG_LIBS=@PKG_LIBS@ $(SHLIB_OPENMP_CXXFLAGS)
 
 # Use C++14 with QuantLib 1.28 or later -- and the default with R 4.2.* anyway
 #CXX_STD=CXX14
